# fetal-ultrasound-edm2

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  calculate_metrics.py  count_flops.py  dataset_tool.py  fid_measurement.py  generate_images.py  pyproject.toml  reconstruct_phema.py  requirements.txt  toy_example.py  train_edm2.py
data/: README.md
dnnlib/: __init__.py  util.py
ghcr/: Dockerfile  Dockerfile-uv  README.md
notebooks/: training-model-pipeline.ipynb
torch_utils/: distributed.py  misc.py  persistence.py  training_stats.py
training/: __init__.py  dataset.py  encoders.py  networks_edm2.py  phema.py  training_loop.py
unified-ai/: GHCR.md  UAI.md  training-edm2-model-ghcr.ipynb  training-edm2-model-scratch-volume.ipynb
xfetusEDM2/: _version.py
