[project]
name = "xfetusedm2"
version = "0.1.0"
description = "Python library for synthesis of ultrasound fetal imaging."
readme = "README.md"
requires-python = ">=3.11,<3.13"
keywords = ["artificial intelligence", "diffusion models", "ultrasound", "medical imaging"]

authors = [
  { name = "Harvey Mannering", email = "add@email.com" },
  { name = "Miguel Xochicale", email = "add@email.com" },
]

maintainers = [
  { name = "Harvey Mannering", email = "add@email.com" },
  { name = "Miguel Xochicale", email = "add@email.com" },
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "pillow",
  "loguru",
  "notebook",
  "numpy",
  "omegaconf",
  "pandas",
  "pyyaml",
  "wandb",
]

[project.optional-dependencies]

test = [
  "black",
  "codespell",
  "detect-secrets",
  "isort",
  "pre-commit",
  "pylint",
  "pytest",
]

learning = [
  "accelerate",
  "basicsr",
  "diffusers",
  "einops",
  "scikit-learn",
  "torch",
  "torchvision",
]

[tool.uv]
package = false
